--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "babel src -d dist",
-    "start": "webpack-dev-server --hot --content-base dist/"
+    "start": "webpack-dev-server --hot --content-base dist/",
+    "docs": "./node_modules/.bin/jsdoc src/**/* -d docs"
   },
   "repository": {
     "type": "git",
@@ -29,6 +30,9 @@
     "eslint-plugin-import": "^1.11.1",
     "eslint-plugin-jsx-a11y": "^2.0.1",
     "eslint-plugin-react": "^5.2.2",
+    "jsdoc": "^3.4.0",
+    "jshint": "^2.9.2",
+    "minami": "^1.1.1",
     "react": "^15.2.1",
     "react-dom": "^15.2.1"
   },
