add radio buttons for type selection

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-dom": "^15.2.1"
   },
   "dependencies": {
+    "axios": "^0.13.1",
     "immutable": "^3.8.1",
     "redux": "^3.5.2",
     "video.js": "^5.10.7",
